[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Background/statsBackground.png" type="Texture" id=1]
[ext_resource path="res://statsMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/font/Panton-Trial-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[node name="statsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="statsBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="searchHboxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.3
anchor_right = 0.3
margin_right = 40.0
margin_bottom = 40.0

[node name="search" type="LineEdit" parent="searchHboxContainer"]
margin_right = 166.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )

[node name="submit" type="Button" parent="searchHboxContainer"]
margin_left = 170.0
margin_right = 431.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
text = "Chercher"

[node name="statsVboxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="usernameLabel" type="Label" parent="statsVboxContainer"]
margin_right = 130.0
margin_bottom = 14.0

[node name="nbTurnLabel" type="Label" parent="statsVboxContainer"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 49.0
text = "Nombre de tour : 50
"

[node name="sawmillLabel" type="Label" parent="statsVboxContainer"]
margin_top = 53.0
margin_right = 130.0
margin_bottom = 67.0

[node name="mineLabel" type="Label" parent="statsVboxContainer"]
margin_top = 71.0
margin_right = 130.0
margin_bottom = 85.0

[node name="barrackLabel" type="Label" parent="statsVboxContainer"]
margin_top = 89.0
margin_right = 130.0
margin_bottom = 103.0

[node name="bankLabel" type="Label" parent="statsVboxContainer"]
margin_top = 107.0
margin_right = 130.0
margin_bottom = 121.0

[node name="karmaLabel" type="Label" parent="statsVboxContainer"]
margin_top = 125.0
margin_right = 130.0
margin_bottom = 139.0

[node name="searchStatsRequest" type="HTTPRequest" parent="."]

[node name="back" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Retour"

[connection signal="pressed" from="searchHboxContainer/submit" to="." method="_on_submit_pressed"]
[connection signal="request_completed" from="searchStatsRequest" to="." method="_on_searchStats_request_completed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
